fix dropdown menu for export formats to make it more legible

--- a/src/index.css
+++ b/src/index.css
@@ -369,6 +369,11 @@ select {
   font-size: 0.78rem;
 }
 
+.book-export-controls__select option {
+  background-color: Field;
+  color: FieldText;
+}
+
 .book-export-controls__select:disabled {
   opacity: 0.7;
   cursor: not-allowed;
